# django-travel

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: test.yml
demo/: db.sqlite3  manage.py  settings.py
demo/demo_proj/: db.sqlite3  settings.py  urls.py
demo/demo_proj/management/commands/: _data.py  loaddb.py
demo/demo_proj/templates/registration/: login.html
demo/demo_proj/templates/travel/: base.html
demo/fixtures/: travel.json
demo/templates/: home.html
demo/templates/travel/: base.html
requirements/: base.txt  devel.txt
src/travel/: __init__.py  admin.py  context_processors.py  forms.py  managers.py  models.py  urls.py  utils.py  version.py  views.py
src/travel/api/: serializers.py  urls.py  views.py
src/travel/extras/: games.py
src/travel/extras/geocode/: reversegc.py
src/travel/migrations/: 0001_initial.py  0002_auto_20170628_2212.py  0003_auto_20180216_1854.py  0004_auto_20180306_1507.py  0005_auto_20181014_1923.py  0006_auto_20181022_2340.py  0007_auto_20200225_1534.py  0008_auto_20230711_0701.py  0009_alter_travelalias_options_and_more.py  0010_travelentityinfo_intregion_travelentityinfo_region_and_more.py
src/travel/templatetags/: pagination_tags.py  travel_tags.py
temp/foobar/foobar/: settings.py  urls.py
test/: conftest.py  test_urls.py  test_utils.py  test_views.py
travel/: __init__.py  admin.py  context_processors.py  flag_game.py  forms.py  managers.py  models.py  urls.py  utils.py  views.py
travel/api/: serializers.py  urls.py  views.py
travel/extras/: flag_game.py
travel/extras/geocode/: reversegc.py
travel/management/commands/: geocode.py  load_travel.py  user_history.py
travel/migrations/: 0001_initial.py  0002_auto_20170628_2212.py  0004_auto_20180306_1507.py  0005_auto_20181011_2217.py
travel/static/travel/: flag-game.js  travel.js
travel/templates/travel/: flag-game.html  languages.html  log-entry.html  plugs.html
(+61 files in other folders)
